--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 h1{
-    font-size: 6em;
+    font-size: 5vh;
     text-shadow: -0.2vh 0.2vh #555;
     color: #6e2;
     text-shadow: 0.1em 0.1em 0.3em #4a2;
@@ -11,7 +11,7 @@ h1{
     
 }
 h2 {
-    font-size: 2em;
+    font-size: 2vh;
     color: #6e2;
     text-shadow: 0.2em 0.1em 0.3em #4a2;
     animation-name: code-fade;
@@ -21,14 +21,19 @@ h2 {
     animation-delay: 0.8s;
     
 }
+html, body{
+    max-width: 100vw;
+    overflow-x:clip;
+
+}
 
 body{ /*set a bunch of standard values for everything else in this project*/
     font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 2em;
     color: azure;
     display: block;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
     min-height: 500%;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -36,12 +41,11 @@ body{ /*set a bunch of standard values for everything else in this project*/
 }
 .MainBlock{
     position: relative;
-    display: inline-block;
-    height: 40vh;
-    width: 120vw;
-    left: -10vh;    
-    top: -15vh;    
-    padding: 20vh;/* ensures box shadow goes to the end of the screen*/
+    height: 25vh;
+    top: -30vh;    
+    width: 200vw;
+    left: -20vw;    
+    padding: 20vh 22vw;/* ensures box shadow goes to the end of the screen*/
     box-shadow: -5vh 24vh 12vh #111,-5vh -24vh 12vh #111;
     background-color:none;
     background: #111;
@@ -49,56 +53,55 @@ body{ /*set a bunch of standard values for everything else in this project*/
     z-index: -1;
 }
 .content{
-    position:relative;
     rotate: 10deg;
     background-color: #111;
-    width: 80vw;
-    height: 60vh;
+    max-width: 80vh;
+    width: 40%;
+    height: 45vh;
 }
 #coverall{
-    position: absolute;
+    position:relative;
     z-index: 1;
     background-color: #111;
-    top:53vh;
+    top:-15vh;
     animation-name: fadeOut;
     animation-duration: 2s ;
     animation-fill-mode: forwards;
     animation-play-state: paused;
-    width :100%;
-    height:800%;
+    width :150%;
+    height:200%;
 }
 
+
 #cubefall{
-    position:relative;
     height: 50vh;
     max-height: 50vw;
     width: 50vw;
-    margin: 2.5vh;
+    margin:5vh;
     transition: 0.05s;
 }
 #cubefall:hover{
     height: 60vh;
     max-height: 50vw;
     width: 60vw;
-    margin: 0vh;
+    margin: 0vh 0vh 0vh 5vh;
     transition: 0.05s   
 }
 #cubefallClick{
     position:relative;
-    top:-50vh;
-    height: 50vh;
+    top:-10vh;
+    height: 10vh;
     max-height: 50vw;
-    width: 50vw;
-    background-color: #6e2;
-    opacity: 0%;
+    width: 100%;
+    background-color: #111;
+    opacity: 15%;
     transition: 0.05s  
 } 
 #cubefallClick:hover{
-    top:-60vh;
-    height: 60vh;
+    opacity: 90%;
+    top:-40vh;
+    height: 40vh;
     max-height: 50vw;
-    width: 60vw;
-    margin: 0vh;
     transition: 0.05s   
 }
 iframe{
@@ -106,13 +109,12 @@ iframe{
     height: 100%;
     width:  100%;
 }
+
 table{
-    width:90vw;
+    width:100vw;
     margin:5vh;
 }
-td{
-    font-size: 2em;
-}
+
 
 
 
@@ -125,8 +127,8 @@ td{
     animation-duration: 1s;
 }
 @keyframes fadeOut{
-    from{ opacity: 100%; z-index: 1;}
-    to{ opacity: 0%; z-index:-2;}
+    from{ opacity: 100%; z-index: 1;height:200%;}
+    to{ opacity: 0%; z-index:-2;height:0%;}
 }
 @keyframes code-fade{
     0% {
