--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,10 @@
 h1{
-    font-size: 5vh;
-    text-shadow: -0.2vh 0.2vh #555;
-    color: #6e2;
-    text-shadow: 0.1em 0.1em 0.3em #4a2;
-    animation-name: code-fade;
-    animation-duration: 10s;
-    animation-direction: alternate-reverse;
-    animation-iteration-count: infinite;
-    animation-delay: 2s;
-    
+    font-size: 5vh;    
 }
 h2 {
     font-size: 2vh;
+}
+.crtText{
     color: #6e2;
     text-shadow: 0.2em 0.1em 0.3em #4a2;
     animation-name: code-fade;
@@ -19,7 +12,6 @@ h2 {
     animation-direction: alternate-reverse;
     animation-iteration-count: infinite;
     animation-delay: 0.8s;
-    
 }
 html, body{
     max-width: 100vw;
@@ -29,7 +21,7 @@ html, body{
 
 body{ /*set a bunch of standard values for everything else in this project*/
     font-family: "Lucida Console", "Courier New", monospace;
-    font-size: 2em;
+    font-size: 3em;
     color: azure;
     display: block;
     margin: 0;
@@ -40,7 +32,7 @@ body{ /*set a bunch of standard values for everything else in this project*/
     background: linear-gradient(45deg, red, blue);
 }
 .MainBlock{
-    position: relative;
+    position: absolute;
     height: 25vh;
     top: -30vh;    
     width: 200vw;
@@ -53,38 +45,41 @@ body{ /*set a bunch of standard values for everything else in this project*/
     z-index: -1;
 }
 .content{
-    rotate: 10deg;
+    padding: 5vh 2vw;
     background-color: #111;
     max-width: 80vh;
-    width: 40%;
+    width: 80%;
     height: 45vh;
 }
 #coverall{
     position:relative;
     z-index: 1;
     background-color: #111;
-    top:-15vh;
+    top:-0vh;
     animation-name: fadeOut;
     animation-duration: 2s ;
     animation-fill-mode: forwards;
     animation-play-state: paused;
-    width :150%;
+    width :200%;
     height:200%;
+    rotate: -10deg;
 }
 
 
 #cubefall{
     height: 50vh;
     max-height: 50vw;
-    width: 50vw;
+    width: 80%;
+    max-width: 50vw;
     margin:5vh;
     transition: 0.05s;
 }
 #cubefall:hover{
     height: 60vh;
     max-height: 50vw;
-    width: 60vw;
-    margin: 0vh 0vh 0vh 5vh;
+    width: 95%;
+    max-width: 60vw;
+    margin: 0vh;
     transition: 0.05s   
 }
 #cubefallClick{
@@ -111,10 +106,20 @@ iframe{
 }
 
 table{
-    width:100vw;
-    margin:5vh;
+    width:95vw;
+    margin:2.5vw;
 }
-
+td{
+    max-width: 40%;
+}
+#Qotd{
+    font-size: 2vh;
+    height: 1em; 
+    width: 180%;
+    overflow-y: clip;
+    overflow-x: clip;
+    background: none;
+}
 
 
 
