--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,19 +18,25 @@ html, body{
     overflow-x:clip;
 
 }
-
 body{ /*set a bunch of standard values for everything else in this project*/
     font-family: "Lucida Console", "Courier New", monospace;
-    font-size: 3em;
+    font-size: 1em;
     color: azure;
     display: block;
     margin: 0;
     padding: 0;
-    min-height: 500%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background: linear-gradient(45deg, red, blue);
+    background: linear-gradient(45deg, red,blue);
 }
+.ScrollingBackground{
+    background: linear-gradient(45deg, rgb(89, 0, 0),rgb(89, 58, 0),rgb(89, 89, 0),rgb(0, 89, 0),rgb(0, 50, 0),rgb(0, 89, 89),rgb(0, 0, 90),rgb(90, 0, 90));
+    width: 500vw;
+    height: 500vh;
+}
+
+
+
 .MainBlock{
     position: absolute;
     height: 25vh;
@@ -55,12 +61,13 @@ body{ /*set a bunch of standard values for everything else in this project*/
     position:relative;
     z-index: 1;
     background-color: #111;
-    top:-0vh;
+    left:-50vw;
+    top:-80vw;
     animation-name: fadeOut;
     animation-duration: 2s ;
     animation-fill-mode: forwards;
     animation-play-state: paused;
-    width :200%;
+    width :1000vw;
     height:200%;
     rotate: -10deg;
 }
@@ -69,17 +76,16 @@ body{ /*set a bunch of standard values for everything else in this project*/
 #cubefall{
     height: 50vh;
     max-height: 50vw;
-    width: 80%;
+    width: 99%;
     max-width: 50vw;
-    margin:5vh;
+    margin:1vh;
     transition: 0.05s;
 }
 #cubefall:hover{
-    height: 60vh;
-    max-height: 50vw;
-    width: 95%;
-    max-width: 60vw;
-    margin: 0vh;
+    height: 51vh;
+    max-height: 51vw;
+    width: 100%;
+    max-width: 51vw;
     transition: 0.05s   
 }
 #cubefallClick{
@@ -94,8 +100,8 @@ body{ /*set a bunch of standard values for everything else in this project*/
 } 
 #cubefallClick:hover{
     opacity: 90%;
-    top:-40vh;
-    height: 40vh;
+    top:-30vh;
+    height: 30vh;
     max-height: 50vw;
     transition: 0.05s   
 }
@@ -106,12 +112,16 @@ iframe{
 }
 
 table{
-    width:95vw;
     margin:2.5vw;
 }
-td{
-    max-width: 40%;
+tr{
+    column-count: 3;
+    column-gap: 1vw;
 }
+td{
+    width: 32vw;
+}
+
 #Qotd{
     font-size: 2vh;
     height: 1em; 
