--- a/projects/SnowFall/stylesheet.css
+++ b/projects/SnowFall/stylesheet.css
@@ -1,25 +1,21 @@
 body{
-    background: grey;
+    background: #000;
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 1em;
+    columns: azure;
+    margin: 2em;
+    padding: 0;
+    overflow: hidden;
 }
-
-.hoverHide .hoverHideUnder{
-    opacity:    100%;
-    transition: 1s;
+div{
+    color: azure;
 }
-.hoverHide:hover{
-    opacity:      0%;
-    transition: 1s;
-}
-.hoverHide{
-    position: absolute;
-}
-
-img{
-    width:      60vw;
-    height:     40vw;
-}
-td{
-    width: 33vw;
-    padding: 3vw;
+video{
+    position:relative;
+    display: block;
+    height:     100vh;
+    max-width:      100vw;
+    top:-10vh;
+    margin: auto;
 }
 
