--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,59 +73,49 @@ body{ /*set a bunch of standard values for everything else in this project*/
 }
 
 
-#cubefall{
-    height: 50vh;
-    max-height: 50vw;
-    width: 99%;
-    max-width: 50vw;
-    margin:1vh;
-    transition: 0.05s;
-}
-#cubefall:hover{
-    height: 51vh;
-    max-height: 51vw;
-    width: 100%;
-    max-width: 51vw;
-    transition: 0.05s   
-}
-#cubefallClick{
-    position:relative;
-    top:-10vh;
+
+.iframeClick{
+    position:absolute;
+    bottom:0vh;
     height: 10vh;
     max-height: 50vw;
-    width: 100%;
+    width: 90%;
     background-color: #111;
     opacity: 15%;
-    transition: 0.05s  
+    transition: 0.05s;  
+    border-radius: 0px 0px 30px 30px;
 } 
-#cubefallClick:hover{
+.iframeClick:hover{
     opacity: 90%;
-    top:-30vh;
     height: 30vh;
     max-height: 50vw;
     transition: 0.05s   
 }
 iframe{
-    border-radius: 0% ;
-    height: 100%;
-    width:  100%;
+    border-radius: 30px;
+    height: 32vw;
+    width:  90%;
 }
 
 table{
-    margin:2.5vw;
+    margin:3vw;
 }
 tr{
     column-count: 3;
     column-gap: 1vw;
 }
 td{
+    position:relative;
     width: 32vw;
+    margin: 5%;
 }
 
 #Qotd{
+    position: absolute;
     font-size: 2vh;
     height: 1em; 
-    width: 180%;
+    top: -1em;
+    width: 200vw;
     overflow-y: clip;
     overflow-x: clip;
     background: none;
